feat: add auth middleware, swagger
