# server/route.go
@@ -2,22 +2,44 @@ package server
 
 import (
 	"api-orders/controllers"
+	"api-orders/middlewares"
+
+	"api-orders/docs" // docs is generated by Swag CLI, you have to import it.
 
 	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// @title Swagger Example API
+// @version 1.0
+// @description api-orders
+// @termsOfService http://swagger.io/terms/
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Access-token
+// @host localhost:8081
+// @BasePath /api
 func initRoute() *gin.Engine {
+	docs.SwaggerInfo.Schemes = []string{"http", "https"}
+
 	route := gin.New()
 	route.Use(gin.Logger())
 	route.Use(gin.Recovery())
 
 	api := route.Group("api")
 	{
+		api.Use(middlewares.Authenticate())
 		orders := api.Group("orders")
 		{
 			order := new(controllers.OrdersController)
 			orders.POST("", order.Create)
+			orders.GET("/:id", order.FindOne)
+			orders.POST("/:id/cancel", order.Cancel)
 		}
 	}
+
+	url := ginSwagger.URL("http://localhost:8081/swagger/doc.json") // The url pointing to API definition
+	route.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
 	return route
 }
